LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/AADHAR_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>AADHAR_NUMBER__c</fullName>
    <description>AADHAR_NUMBER</description>
    <externalDeveloperName>AADHAR_NUMBER</externalDeveloperName>
    <label>AADHAR_NUMBER</label>
    <length>25</length>
    <type>Text</type>
</CustomField>