LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ACA_FCA__c.field-meta.xml
<CustomField>
    <fullName>ACA_FCA__c</fullName>
    <description>ACA_FCA</description>
    <externalDeveloperName>ACA_FCA</externalDeveloperName>
    <label>ACA_FCA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>