LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ACA_FCA_DATE__c.field-meta.xml
<CustomField>
    <fullName>ACA_FCA_DATE__c</fullName>
    <description>ACA_FCA_DATE</description>
    <externalDeveloperName>ACA_FCA_DATE</externalDeveloperName>
    <label>ACA_FCA_DATE</label>
    <type>DateTime</type>
</CustomField>