LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ACC_YEAR1__c.field-meta.xml
<CustomField>
    <fullName>ACC_YEAR1__c</fullName>
    <description>ACC_YEAR1</description>
    <externalDeveloperName>ACC_YEAR1</externalDeveloperName>
    <label>ACC_YEAR1</label>
    <length>12</length>
    <type>Text</type>
</CustomField>