LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ACCOUNT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_NUMBER__c</fullName>
    <description>ACCOUNT_NUMBER</description>
    <externalDeveloperName>ACCOUNT_NUMBER</externalDeveloperName>
    <label>ACCOUNT_NUMBER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>