LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ACTIVE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_FLAG__c</fullName>
    <description>ACTIVE_FLAG</description>
    <externalDeveloperName>ACTIVE_FLAG</externalDeveloperName>
    <label>ACTIVE_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>