LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ADDR_PROOF__c.field-meta.xml
<CustomField>
    <fullName>ADDR_PROOF__c</fullName>
    <description>ADDR_PROOF</description>
    <externalDeveloperName>ADDR_PROOF</externalDeveloperName>
    <label>ADDR_PROOF</label>
    <length>1</length>
    <type>Text</type>
</CustomField>