LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/AMEXCARD_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>AMEXCARD_NUMBER__c</fullName>
    <description>AMEXCARD_NUMBER</description>
    <externalDeveloperName>AMEXCARD_NUMBER</externalDeveloperName>
    <label>AMEXCARD_NUMBER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>