LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ANNI_SPE_DATE__c.field-meta.xml
<CustomField>
    <fullName>ANNI_SPE_DATE__c</fullName>
    <description>ANNI_SPE_DATE</description>
    <externalDeveloperName>ANNI_SPE_DATE</externalDeveloperName>
    <label>ANNI_SPE_DATE</label>
    <type>DateTime</type>
</CustomField>