LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/APP_FORM__c.field-meta.xml
<CustomField>
    <fullName>APP_FORM__c</fullName>
    <description>APP_FORM</description>
    <externalDeveloperName>APP_FORM</externalDeveloperName>
    <label>APP_FORM</label>
    <length>1</length>
    <type>Text</type>
</CustomField>