LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/APPROVAL_FLAG__c.field-meta.xml
<CustomField>
    <fullName>APPROVAL_FLAG__c</fullName>
    <description>APPROVAL_FLAG</description>
    <externalDeveloperName>APPROVAL_FLAG</externalDeveloperName>
    <label>APPROVAL_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>