LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ARTICLE_END_DT__c.field-meta.xml
<CustomField>
    <fullName>ARTICLE_END_DT__c</fullName>
    <description>ARTICLE_END_DT</description>
    <externalDeveloperName>ARTICLE_END_DT</externalDeveloperName>
    <label>ARTICLE_END_DT</label>
    <type>DateTime</type>
</CustomField>