LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ASSURED_BONUS__c.field-meta.xml
<CustomField>
    <fullName>ASSURED_BONUS__c</fullName>
    <description>ASSURED_BONUS</description>
    <externalDeveloperName>ASSURED_BONUS</externalDeveloperName>
    <label>ASSURED_BONUS</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>