LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/BANK_ACC_NO__c.field-meta.xml
<CustomField>
    <fullName>BANK_ACC_NO__c</fullName>
    <description>BANK_ACC_NO</description>
    <externalDeveloperName>BANK_ACC_NO</externalDeveloperName>
    <label>BANK_ACC_NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>