LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/BANK_AID__c.field-meta.xml
<CustomField>
    <fullName>BANK_AID__c</fullName>
    <description>BANK_AID</description>
    <externalDeveloperName>BANK_AID</externalDeveloperName>
    <label>BANK_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>