LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/BIRTH_DATE__c.field-meta.xml
<CustomField>
    <fullName>BIRTH_DATE__c</fullName>
    <description>BIRTH_DATE</description>
    <externalDeveloperName>BIRTH_DATE</externalDeveloperName>
    <label>BIRTH_DATE</label>
    <type>DateTime</type>
</CustomField>