LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/BIRTH_PLACE__c.field-meta.xml
<CustomField>
    <fullName>BIRTH_PLACE__c</fullName>
    <description>BIRTH_PLACE</description>
    <externalDeveloperName>BIRTH_PLACE</externalDeveloperName>
    <label>BIRTH_PLACE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>