LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/BLOOD_GROUP__c.field-meta.xml
<CustomField>
    <fullName>BLOOD_GROUP__c</fullName>
    <description>BLOOD_GROUP</description>
    <externalDeveloperName>BLOOD_GROUP</externalDeveloperName>
    <label>BLOOD_GROUP</label>
    <length>8</length>
    <type>Text</type>
</CustomField>