LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/BUDDY_ID__c.field-meta.xml
<CustomField>
    <fullName>BUDDY_ID__c</fullName>
    <description>BUDDY_ID</description>
    <externalDeveloperName>BUDDY_ID</externalDeveloperName>
    <label>BUDDY_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>