LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CA_MEMBSHIP_NO__c.field-meta.xml
<CustomField>
    <fullName>CA_MEMBSHIP_NO__c</fullName>
    <description>CA_MEMBSHIP_NO</description>
    <externalDeveloperName>CA_MEMBSHIP_NO</externalDeveloperName>
    <label>CA_MEMBSHIP_NO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>