LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CHILDRENS__c.field-meta.xml
<CustomField>
    <fullName>CHILDRENS__c</fullName>
    <description>CHILDRENS</description>
    <externalDeveloperName>CHILDRENS</externalDeveloperName>
    <label>CHILDRENS</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>