LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/COMPENSATION_FLAG__c.field-meta.xml
<CustomField>
    <fullName>COMPENSATION_FLAG__c</fullName>
    <description>COMPENSATION_FLAG</description>
    <externalDeveloperName>COMPENSATION_FLAG</externalDeveloperName>
    <label>COMPENSATION_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>