LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CONFIRMATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>CONFIRMATION_DATE__c</fullName>
    <description>CONFIRMATION_DATE</description>
    <externalDeveloperName>CONFIRMATION_DATE</externalDeveloperName>
    <label>CONFIRMATION_DATE</label>
    <type>DateTime</type>
</CustomField>