LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CONTACT_LOC__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_LOC__c</fullName>
    <description>CONTACT_LOC</description>
    <externalDeveloperName>CONTACT_LOC</externalDeveloperName>
    <label>CONTACT_LOC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>