LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CONTRACT_EXP_DATE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_EXP_DATE__c</fullName>
    <description>CONTRACT_EXP_DATE</description>
    <externalDeveloperName>CONTRACT_EXP_DATE</externalDeveloperName>
    <label>CONTRACT_EXP_DATE</label>
    <type>DateTime</type>
</CustomField>