LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CONTRACT_PERIOD__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_PERIOD__c</fullName>
    <description>CONTRACT_PERIOD</description>
    <externalDeveloperName>CONTRACT_PERIOD</externalDeveloperName>
    <label>CONTRACT_PERIOD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>