LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/COP_DATE__c.field-meta.xml
<CustomField>
    <fullName>COP_DATE__c</fullName>
    <description>COP_DATE</description>
    <externalDeveloperName>COP_DATE</externalDeveloperName>
    <label>COP_DATE</label>
    <type>DateTime</type>
</CustomField>