LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/COP_FEEPAID_CURNTYEAR__c.field-meta.xml
<CustomField>
    <fullName>COP_FEEPAID_CURNTYEAR__c</fullName>
    <description>COP_FEEPAID_CURNTYEAR</description>
    <externalDeveloperName>COP_FEEPAID_CURNTYEAR</externalDeveloperName>
    <label>COP_FEEPAID_CURNTYEAR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>