LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/COP_FIRSTTIME_ISSUEDATE__c.field-meta.xml
<CustomField>
    <fullName>COP_FIRSTTIME_ISSUEDATE__c</fullName>
    <description>COP_FIRSTTIME_ISSUEDATE</description>
    <externalDeveloperName>COP_FIRSTTIME_ISSUEDATE</externalDeveloperName>
    <label>COP_FIRSTTIME_ISSUEDATE</label>
    <type>DateTime</type>
</CustomField>