LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/COP_LAST_ACTIVATIONDATE__c.field-meta.xml
<CustomField>
    <fullName>COP_LAST_ACTIVATIONDATE__c</fullName>
    <description>COP_LAST_ACTIVATIONDATE</description>
    <externalDeveloperName>COP_LAST_ACTIVATIONDATE</externalDeveloperName>
    <label>COP_LAST_ACTIVATIONDATE</label>
    <type>DateTime</type>
</CustomField>