LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/COP_STATUS_FULLTIME__c.field-meta.xml
<CustomField>
    <fullName>COP_STATUS_FULLTIME__c</fullName>
    <description>COP_STATUS_FULLTIME</description>
    <externalDeveloperName>COP_STATUS_FULLTIME</externalDeveloperName>
    <label>COP_STATUS_FULLTIME</label>
    <length>8</length>
    <type>Text</type>
</CustomField>