LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_ADDR__c.field-meta.xml
<CustomField>
    <fullName>CORRS_ADDR__c</fullName>
    <description>CORRS_ADDR</description>
    <externalDeveloperName>CORRS_ADDR</externalDeveloperName>
    <label>CORRS_ADDR</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>