LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_CITY__c.field-meta.xml
<CustomField>
    <fullName>CORRS_CITY__c</fullName>
    <description>CORRS_CITY</description>
    <externalDeveloperName>CORRS_CITY</externalDeveloperName>
    <label>CORRS_CITY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>