LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_DIST__c.field-meta.xml
<CustomField>
    <fullName>CORRS_DIST__c</fullName>
    <description>CORRS_DIST</description>
    <externalDeveloperName>CORRS_DIST</externalDeveloperName>
    <label>CORRS_DIST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>