LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_MAIL1__c.field-meta.xml
<CustomField>
    <fullName>CORRS_MAIL1__c</fullName>
    <description>CORRS_MAIL1</description>
    <externalDeveloperName>CORRS_MAIL1</externalDeveloperName>
    <label>CORRS_MAIL1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>