LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_MAIL2__c.field-meta.xml
<CustomField>
    <fullName>CORRS_MAIL2__c</fullName>
    <description>CORRS_MAIL2</description>
    <externalDeveloperName>CORRS_MAIL2</externalDeveloperName>
    <label>CORRS_MAIL2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>