LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_MOBILE__c.field-meta.xml
<CustomField>
    <fullName>CORRS_MOBILE__c</fullName>
    <description>CORRS_MOBILE</description>
    <externalDeveloperName>CORRS_MOBILE</externalDeveloperName>
    <label>CORRS_MOBILE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>