LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_PIN__c.field-meta.xml
<CustomField>
    <fullName>CORRS_PIN__c</fullName>
    <description>CORRS_PIN</description>
    <externalDeveloperName>CORRS_PIN</externalDeveloperName>
    <label>CORRS_PIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>