LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_RES_STD__c.field-meta.xml
<CustomField>
    <fullName>CORRS_RES_STD__c</fullName>
    <description>CORRS_RES_STD</description>
    <externalDeveloperName>CORRS_RES_STD</externalDeveloperName>
    <label>CORRS_RES_STD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>