LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_RES_TEL2__c.field-meta.xml
<CustomField>
    <fullName>CORRS_RES_TEL2__c</fullName>
    <description>CORRS_RES_TEL2</description>
    <externalDeveloperName>CORRS_RES_TEL2</externalDeveloperName>
    <label>CORRS_RES_TEL2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>