LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_RES_TEL__c.field-meta.xml
<CustomField>
    <fullName>CORRS_RES_TEL__c</fullName>
    <description>CORRS_RES_TEL</description>
    <externalDeveloperName>CORRS_RES_TEL</externalDeveloperName>
    <label>CORRS_RES_TEL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>