LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/CORRS_STATE__c.field-meta.xml
<CustomField>
    <fullName>CORRS_STATE__c</fullName>
    <description>CORRS_STATE</description>
    <externalDeveloperName>CORRS_STATE</externalDeveloperName>
    <label>CORRS_STATE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>