LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/COUNTRY_OF_BIRTH__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_OF_BIRTH__c</fullName>
    <description>COUNTRY_OF_BIRTH</description>
    <externalDeveloperName>COUNTRY_OF_BIRTH</externalDeveloperName>
    <label>COUNTRY_OF_BIRTH</label>
    <length>25</length>
    <type>Text</type>
</CustomField>