LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/DATA_CARD_DTLS__c.field-meta.xml
<CustomField>
    <fullName>DATA_CARD_DTLS__c</fullName>
    <description>DATA_CARD_DTLS</description>
    <externalDeveloperName>DATA_CARD_DTLS</externalDeveloperName>
    <label>DATA_CARD_DTLS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>