LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/DEP_DATE__c.field-meta.xml
<CustomField>
    <fullName>DEP_DATE__c</fullName>
    <description>DEP_DATE</description>
    <externalDeveloperName>DEP_DATE</externalDeveloperName>
    <label>DEP_DATE</label>
    <type>DateTime</type>
</CustomField>