LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/DEPT_ID__c.field-meta.xml
<CustomField>
    <fullName>DEPT_ID__c</fullName>
    <description>DEPT_ID</description>
    <externalDeveloperName>DEPT_ID</externalDeveloperName>
    <label>DEPT_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>