LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/DEPUTATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>DEPUTATION_DATE__c</fullName>
    <description>DEPUTATION_DATE</description>
    <externalDeveloperName>DEPUTATION_DATE</externalDeveloperName>
    <label>DEPUTATION_DATE</label>
    <type>DateTime</type>
</CustomField>