LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/DESG_ID__c.field-meta.xml
<CustomField>
    <fullName>DESG_ID__c</fullName>
    <description>DESG_ID</description>
    <externalDeveloperName>DESG_ID</externalDeveloperName>
    <label>DESG_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>