LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/DOB_CERTIFICATE__c.field-meta.xml
<CustomField>
    <fullName>DOB_CERTIFICATE__c</fullName>
    <description>DOB_CERTIFICATE</description>
    <externalDeveloperName>DOB_CERTIFICATE</externalDeveloperName>
    <label>DOB_CERTIFICATE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>