LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/DOJ_REG_EMP__c.field-meta.xml
<CustomField>
    <fullName>DOJ_REG_EMP__c</fullName>
    <description>DOJ_REG_EMP</description>
    <externalDeveloperName>DOJ_REG_EMP</externalDeveloperName>
    <label>DOJ_REG_EMP</label>
    <type>DateTime</type>
</CustomField>