LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/DOMICILE__c.field-meta.xml
<CustomField>
    <fullName>DOMICILE__c</fullName>
    <description>DOMICILE</description>
    <externalDeveloperName>DOMICILE</externalDeveloperName>
    <label>DOMICILE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>