LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EBIZ_DESIGNATION__c.field-meta.xml
<CustomField>
    <fullName>EBIZ_DESIGNATION__c</fullName>
    <description>EBIZ_DESIGNATION</description>
    <externalDeveloperName>EBIZ_DESIGNATION</externalDeveloperName>
    <label>EBIZ_DESIGNATION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>