LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EBIZ_FLAG__c.field-meta.xml
<CustomField>
    <fullName>EBIZ_FLAG__c</fullName>
    <description>EBIZ_FLAG</description>
    <externalDeveloperName>EBIZ_FLAG</externalDeveloperName>
    <label>EBIZ_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>