LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EBIZ_MAIL__c.field-meta.xml
<CustomField>
    <fullName>EBIZ_MAIL__c</fullName>
    <description>EBIZ_MAIL</description>
    <externalDeveloperName>EBIZ_MAIL</externalDeveloperName>
    <label>EBIZ_MAIL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>