LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EDU_CERTIFICATE__c.field-meta.xml
<CustomField>
    <fullName>EDU_CERTIFICATE__c</fullName>
    <description>EDU_CERTIFICATE</description>
    <externalDeveloperName>EDU_CERTIFICATE</externalDeveloperName>
    <label>EDU_CERTIFICATE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>