LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EDUCESS__c.field-meta.xml
<CustomField>
    <fullName>EDUCESS__c</fullName>
    <description>EDUCESS</description>
    <externalDeveloperName>EDUCESS</externalDeveloperName>
    <label>EDUCESS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>