LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMAILID_PRINCIPAL__c.field-meta.xml
<CustomField>
    <fullName>EMAILID_PRINCIPAL__c</fullName>
    <description>EMAILID_PRINCIPAL</description>
    <externalDeveloperName>EMAILID_PRINCIPAL</externalDeveloperName>
    <label>EMAILID_PRINCIPAL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>