LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_FNAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_FNAME__c</fullName>
    <description>EMP_FNAME</description>
    <externalDeveloperName>EMP_FNAME</externalDeveloperName>
    <label>EMP_FNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>