LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_GENDER__c.field-meta.xml
<CustomField>
    <fullName>EMP_GENDER__c</fullName>
    <description>EMP_GENDER</description>
    <externalDeveloperName>EMP_GENDER</externalDeveloperName>
    <label>EMP_GENDER</label>
    <length>1</length>
    <type>Text</type>
</CustomField>