LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_GRADE__c.field-meta.xml
<CustomField>
    <fullName>EMP_GRADE__c</fullName>
    <description>EMP_GRADE</description>
    <externalDeveloperName>EMP_GRADE</externalDeveloperName>
    <label>EMP_GRADE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>