LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_INITIAL_ID__c.field-meta.xml
<CustomField>
    <fullName>EMP_INITIAL_ID__c</fullName>
    <description>EMP_INITIAL_ID</description>
    <externalDeveloperName>EMP_INITIAL_ID</externalDeveloperName>
    <label>EMP_INITIAL_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>