LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_LNAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_LNAME__c</fullName>
    <description>EMP_LNAME</description>
    <externalDeveloperName>EMP_LNAME</externalDeveloperName>
    <label>EMP_LNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>