LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_MID__c.field-meta.xml
<CustomField>
    <fullName>EMP_MID__c</fullName>
    <description>EMP_MID</description>
    <externalDeveloperName>EMP_MID</externalDeveloperName>
    <label>EMP_MID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>