LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_MNAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_MNAME__c</fullName>
    <description>EMP_MNAME</description>
    <externalDeveloperName>EMP_MNAME</externalDeveloperName>
    <label>EMP_MNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>