LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_NICKNAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_NICKNAME__c</fullName>
    <description>EMP_NICKNAME</description>
    <externalDeveloperName>EMP_NICKNAME</externalDeveloperName>
    <label>EMP_NICKNAME</label>
    <length>150</length>
    <type>Text</type>
</CustomField>