LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_OLDNAME__c.field-meta.xml
<CustomField>
    <fullName>EMP_OLDNAME__c</fullName>
    <description>EMP_OLDNAME</description>
    <externalDeveloperName>EMP_OLDNAME</externalDeveloperName>
    <label>EMP_OLDNAME</label>
    <length>150</length>
    <type>Text</type>
</CustomField>