LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_STATUS__c.field-meta.xml
<CustomField>
    <fullName>EMP_STATUS__c</fullName>
    <description>EMP_STATUS</description>
    <externalDeveloperName>EMP_STATUS</externalDeveloperName>
    <label>EMP_STATUS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>