LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EMP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>EMP_TYPE__c</fullName>
    <description>EMP_TYPE</description>
    <externalDeveloperName>EMP_TYPE</externalDeveloperName>
    <label>EMP_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>