LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/END_CONTRACT_DATE__c.field-meta.xml
<CustomField>
    <fullName>END_CONTRACT_DATE__c</fullName>
    <description>END_CONTRACT_DATE</description>
    <externalDeveloperName>END_CONTRACT_DATE</externalDeveloperName>
    <label>END_CONTRACT_DATE</label>
    <type>DateTime</type>
</CustomField>