LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EPF_DATE__c.field-meta.xml
<CustomField>
    <fullName>EPF_DATE__c</fullName>
    <description>EPF_DATE</description>
    <externalDeveloperName>EPF_DATE</externalDeveloperName>
    <label>EPF_DATE</label>
    <type>DateTime</type>
</CustomField>