LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EPF_NO__c.field-meta.xml
<CustomField>
    <fullName>EPF_NO__c</fullName>
    <description>EPF_NO</description>
    <externalDeveloperName>EPF_NO</externalDeveloperName>
    <label>EPF_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>