LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EPF_RATE__c.field-meta.xml
<CustomField>
    <fullName>EPF_RATE__c</fullName>
    <description>EPF_RATE</description>
    <externalDeveloperName>EPF_RATE</externalDeveloperName>
    <label>EPF_RATE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>