LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ESIC_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ESIC_FLAG__c</fullName>
    <description>ESIC_FLAG</description>
    <externalDeveloperName>ESIC_FLAG</externalDeveloperName>
    <label>ESIC_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>