LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ESIC_NO__c.field-meta.xml
<CustomField>
    <fullName>ESIC_NO__c</fullName>
    <description>ESIC_NO</description>
    <externalDeveloperName>ESIC_NO</externalDeveloperName>
    <label>ESIC_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>