LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EVALUATOR_ID__c.field-meta.xml
<CustomField>
    <fullName>EVALUATOR_ID__c</fullName>
    <description>EVALUATOR_ID</description>
    <externalDeveloperName>EVALUATOR_ID</externalDeveloperName>
    <label>EVALUATOR_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>