LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/EXTENSION_IFANY__c.field-meta.xml
<CustomField>
    <fullName>EXTENSION_IFANY__c</fullName>
    <description>EXTENSION_IFANY</description>
    <externalDeveloperName>EXTENSION_IFANY</externalDeveloperName>
    <label>EXTENSION_IFANY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>