LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/FATHER_HUSBAND__c.field-meta.xml
<CustomField>
    <fullName>FATHER_HUSBAND__c</fullName>
    <description>FATHER_HUSBAND</description>
    <externalDeveloperName>FATHER_HUSBAND</externalDeveloperName>
    <label>FATHER_HUSBAND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>