LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/FINDER__c.field-meta.xml
<CustomField>
    <fullName>FINDER__c</fullName>
    <description>FINDER</description>
    <externalDeveloperName>FINDER</externalDeveloperName>
    <label>FINDER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>