LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/FIRM_START_DT__c.field-meta.xml
<CustomField>
    <fullName>FIRM_START_DT__c</fullName>
    <description>FIRM_START_DT</description>
    <externalDeveloperName>FIRM_START_DT</externalDeveloperName>
    <label>FIRM_START_DT</label>
    <type>DateTime</type>
</CustomField>