LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/FIXED_SAL__c.field-meta.xml
<CustomField>
    <fullName>FIXED_SAL__c</fullName>
    <description>FIXED_SAL</description>
    <externalDeveloperName>FIXED_SAL</externalDeveloperName>
    <label>FIXED_SAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>