LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/FORM_FN__c.field-meta.xml
<CustomField>
    <fullName>FORM_FN__c</fullName>
    <description>FORM_FN</description>
    <externalDeveloperName>FORM_FN</externalDeveloperName>
    <label>FORM_FN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>