LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/FPF_DATE__c.field-meta.xml
<CustomField>
    <fullName>FPF_DATE__c</fullName>
    <description>FPF_DATE</description>
    <externalDeveloperName>FPF_DATE</externalDeveloperName>
    <label>FPF_DATE</label>
    <type>DateTime</type>
</CustomField>