LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/FPF_NO__c.field-meta.xml
<CustomField>
    <fullName>FPF_NO__c</fullName>
    <description>FPF_NO</description>
    <externalDeveloperName>FPF_NO</externalDeveloperName>
    <label>FPF_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>