LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/FPF_RATE__c.field-meta.xml
<CustomField>
    <fullName>FPF_RATE__c</fullName>
    <description>FPF_RATE</description>
    <externalDeveloperName>FPF_RATE</externalDeveloperName>
    <label>FPF_RATE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>