LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/GRINDER__c.field-meta.xml
<CustomField>
    <fullName>GRINDER__c</fullName>
    <description>GRINDER</description>
    <externalDeveloperName>GRINDER</externalDeveloperName>
    <label>GRINDER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>