LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/GTI_NET_CODE__c.field-meta.xml
<CustomField>
    <fullName>GTI_NET_CODE__c</fullName>
    <description>GTI_NET_CODE</description>
    <externalDeveloperName>GTI_NET_CODE</externalDeveloperName>
    <label>GTI_NET_CODE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>