LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/GUARDIAN_ADDR__c.field-meta.xml
<CustomField>
    <fullName>GUARDIAN_ADDR__c</fullName>
    <description>GUARDIAN_ADDR</description>
    <externalDeveloperName>GUARDIAN_ADDR</externalDeveloperName>
    <label>GUARDIAN_ADDR</label>
    <length>250</length>
    <type>Text</type>
</CustomField>