LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/HEIGHT__c.field-meta.xml
<CustomField>
    <fullName>HEIGHT__c</fullName>
    <description>HEIGHT</description>
    <externalDeveloperName>HEIGHT</externalDeveloperName>
    <label>HEIGHT</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>