LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/HOLDING_COP__c.field-meta.xml
<CustomField>
    <fullName>HOLDING_COP__c</fullName>
    <description>HOLDING_COP</description>
    <externalDeveloperName>HOLDING_COP</externalDeveloperName>
    <label>HOLDING_COP</label>
    <length>8</length>
    <type>Text</type>
</CustomField>