LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/HR_CODE__c.field-meta.xml
<CustomField>
    <fullName>HR_CODE__c</fullName>
    <description>HR_CODE</description>
    <externalDeveloperName>HR_CODE</externalDeveloperName>
    <label>HR_CODE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>