LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/HR_HEAD__c.field-meta.xml
<CustomField>
    <fullName>HR_HEAD__c</fullName>
    <description>HR_HEAD</description>
    <externalDeveloperName>HR_HEAD</externalDeveloperName>
    <label>HR_HEAD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>